-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs24
-
Component/s: hotspot
-
b08
-
b06
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8001523 | 8 | John Cuthbertson | P3 | Resolved | Fixed | b62 |
| JDK-8017991 | 7u45 | John Cuthbertson | P3 | Closed | Fixed | b01 |
| JDK-8002873 | 7u40 | John Cuthbertson | P3 | Closed | Fixed | b01 |
| JDK-8001657 | hs24 | John Cuthbertson | P3 | Closed | Fixed | master |
At some point a change was made that affected the output of VerifyBeforeGC and VerifyAfterGC. Previously it was:
[Verifying threads syms strs zone dict hand C-heap code cache ]
VerifyBeforeGC:[Verifying threads permanent tenured eden syms strs zone dict hand C-heap code cache ]
4.818: [GC [PSYoungGen: 16896K->392K(19712K)] 16896K->396K(62720K), 0.0244147 secs] [Times: user=0.02 sys=0.00, real=0.02 secs]
VerifyBeforeGC:[Verifying threads permanent tenured eden syms strs zone dict hand C-heap code cache ]
5.087: [GC [PSYoungGen: 17288K->392K(19712K)] 17292K->400K(62720K), 0.0597174 secs] [Times: user=0.04 sys=0.03, real=0.06 secs]
VerifyBeforeGC:[Verifying threads permanent tenured eden syms strs zone dict hand C-heap code cache ]
5.410: [GC [PSYoungGen: 17288K->400K(19712K)] 17296K->412K(62720K), 0.0173056 secs] [Times: user=0.02 sys=0.00, real=0.02 secs]
VerifyBeforeGC:[Verifying threads permanent tenured eden syms strs zone dict hand C-heap code cache ]
5.595: [GC [PSYoungGen: 17296K->400K(36608K)] 17308K->416K(79616K), 0.0134239 secs] [Times: user=0.02 sys=0.00, real=0.01 secs]
But is now:
[Verifying threads syms strs zone dict hand C-heap code cache ]
VerifyBeforeGC:4.619: [GC [PSYoungGen: 16896K->416K(19712K)] 16896K->420K(62720K), 0.0170685 secs] [Times: user=0.02 sys=0.00, real=0.02 secs]
VerifyBeforeGC:5.013: [GC [PSYoungGen: 17312K->416K(19712K)] 17316K->424K(62720K), 0.0125283 secs] [Times: user=0.02 sys=0.00, real=0.01 secs]
VerifyBeforeGC:5.239: [GC [PSYoungGen: 17312K->400K(19712K)] 17320K->412K(62720K), 0.0586610 secs] [Times: user=0.04 sys=0.03, real=0.06 secs]
VerifyBeforeGC:5.439: [GC [PSYoungGen: 17296K->432K(36608K)] 17308K->448K(79616K), 0.0167533 secs] [Times: user=0.02 sys=0.00, real=0.02 secs]
VerifyBeforeGC:5.721: [GC [PSYoungGen: 34224K->392K(38144K)] 34240K->412K(81152K), 0.0909802 secs] [Times: user=0.05 sys=0.04, real=0.09 secs]
VerifyBeforeGC:6.034: [GC [PSYoungGen: 35720K->400K(69184K)] 35740K->424K(112192K), 0.0344226 secs] [Times: user=0.04 sys=0.00, real=0.03 secs]
VerifyBeforeGC:6.709: [GC [PSYoungGen: 69136K->64K(69184K)] 69160K->440K(112192K), 0.1976060 secs] [Times: user=0.10 sys=0.11, real=0.20 secs]
[Verifying threads syms strs zone dict hand C-heap code cache ]
VerifyBeforeGC:[Verifying threads permanent tenured eden syms strs zone dict hand C-heap code cache ]
4.818: [GC [PSYoungGen: 16896K->392K(19712K)] 16896K->396K(62720K), 0.0244147 secs] [Times: user=0.02 sys=0.00, real=0.02 secs]
VerifyBeforeGC:[Verifying threads permanent tenured eden syms strs zone dict hand C-heap code cache ]
5.087: [GC [PSYoungGen: 17288K->392K(19712K)] 17292K->400K(62720K), 0.0597174 secs] [Times: user=0.04 sys=0.03, real=0.06 secs]
VerifyBeforeGC:[Verifying threads permanent tenured eden syms strs zone dict hand C-heap code cache ]
5.410: [GC [PSYoungGen: 17288K->400K(19712K)] 17296K->412K(62720K), 0.0173056 secs] [Times: user=0.02 sys=0.00, real=0.02 secs]
VerifyBeforeGC:[Verifying threads permanent tenured eden syms strs zone dict hand C-heap code cache ]
5.595: [GC [PSYoungGen: 17296K->400K(36608K)] 17308K->416K(79616K), 0.0134239 secs] [Times: user=0.02 sys=0.00, real=0.01 secs]
But is now:
[Verifying threads syms strs zone dict hand C-heap code cache ]
VerifyBeforeGC:4.619: [GC [PSYoungGen: 16896K->416K(19712K)] 16896K->420K(62720K), 0.0170685 secs] [Times: user=0.02 sys=0.00, real=0.02 secs]
VerifyBeforeGC:5.013: [GC [PSYoungGen: 17312K->416K(19712K)] 17316K->424K(62720K), 0.0125283 secs] [Times: user=0.02 sys=0.00, real=0.01 secs]
VerifyBeforeGC:5.239: [GC [PSYoungGen: 17312K->400K(19712K)] 17320K->412K(62720K), 0.0586610 secs] [Times: user=0.04 sys=0.03, real=0.06 secs]
VerifyBeforeGC:5.439: [GC [PSYoungGen: 17296K->432K(36608K)] 17308K->448K(79616K), 0.0167533 secs] [Times: user=0.02 sys=0.00, real=0.02 secs]
VerifyBeforeGC:5.721: [GC [PSYoungGen: 34224K->392K(38144K)] 34240K->412K(81152K), 0.0909802 secs] [Times: user=0.05 sys=0.04, real=0.09 secs]
VerifyBeforeGC:6.034: [GC [PSYoungGen: 35720K->400K(69184K)] 35740K->424K(112192K), 0.0344226 secs] [Times: user=0.04 sys=0.00, real=0.03 secs]
VerifyBeforeGC:6.709: [GC [PSYoungGen: 69136K->64K(69184K)] 69160K->440K(112192K), 0.1976060 secs] [Times: user=0.10 sys=0.11, real=0.20 secs]
- backported by
-
JDK-8001523 Heap verification output incorrect/incomplete
-
- Resolved
-
-
JDK-8001657 Heap verification output incorrect/incomplete
-
- Closed
-
-
JDK-8002873 Heap verification output incorrect/incomplete
-
- Closed
-
-
JDK-8002874 Heap verification output incorrect/incomplete
-
- Closed
-
-
JDK-8002875 Heap verification output incorrect/incomplete
-
- Closed
-
-
JDK-8017991 Heap verification output incorrect/incomplete
-
- Closed
-
- relates to
-
JDK-8026043 Add regression test for JDK-8000831
-
- Resolved
-
(1 backported by, 1 relates to)