8000831: Heap verification output incorrect/incomplete

Restore non-silent output of heap verification.

Reviewed-by: ysr, brutisso, jmasa